Gif background is now correctly scaling, and extra scaling is cut off

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,19 @@
 body {
+	height: 100%;
+	background-color: white;
+    overflow: hidden;
+}
+/*.bg-image {
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	background-color: white;
+
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	background-size: cover;
-	background-color: white;
-	background-position: center;
-}
+}*/
 
 .verticalCenter {
 	position: relative;
